handle java preview